Updated to reference fmepedia server

--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@
 				 
 			<div class="nav-collapse collapse">
 				<a href="https://github.com/safesoftware/fmepedia-easygeocoder" class="btn">
-					<img src="libs/github.png"> Fork GitHub
+					<img src="libs/GitHub.png"> Fork GitHub
 				</a>
 				<a href="https://github.com/safesoftware/fmepedia-easygeocoder/archive/master.zip" class="btn">
 					<i class="icon-download-alt"></i> Download Zip
