Allow spaces in filename and restart button to map page.

--- a/www/index.html
+++ b/www/index.html
@@ -144,7 +144,7 @@
 	</div>
 	<div id='mapPage'>
 		<div id='refreshBtn'>
-				<button class='round-button' id='back' onClick='geocoder.backToFields()'><i class='icon-chevron-left'></i></button>
+				<button class='round-button' id='back' onClick='geocoder.restart()'><i class='icon-refresh'></i></button>
 			</div>
 		<div id="mapDiv" class="map container">
 		</div>
