--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
 
 	<!-- Stylesheet for demo/tutorial -->
 	<link rel="stylesheet" href="css/index.css">
-	
+
 	<!-- Generic server functions -->
 	<script src="js/FMEServer.js" type="text/javascript"></script>
 
@@ -46,7 +46,7 @@
 
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
-			<div class="container">        
+			<div class="container">
 				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -54,8 +54,14 @@
 				</a>
 
 			<div class="brand">FME Server<span class="hidden-tiny"> Demos</span></div>
-				 
+
 			<div class="nav-collapse collapse">
+				<a href="https://knowledge.safe.com/articles/Samples_and_Demos/EasyGeocoder-Data-Driven-Self-Serve-Data-Transformation" class="btn">
+					View KC article
+				</a>
+				<a href="http://playground.fmeserver.com/demos/" class="btn">
+					<img src="libs/server-icon.png"> View all Demos
+				</a>
 				<a href="https://github.com/safesoftware/fmepedia-easygeocoder" class="btn">
 					<img src="libs/GitHub.png"> Fork GitHub
 				</a>
@@ -83,7 +89,7 @@
 			<div id='dropzone' class='fade well well-large'>
                 <p id='dropText'>Click 'Add file' or drop your file here</p>
                 <br/>
-                
+
                 <span class="btn btn-success fileinput-button" id='uploadBtn'>
                 <i class="icon-plus icon-white"></i>
                 <span>Add file...</span>
